--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/http-status": "^0.2.30",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "http-status": "^2.0.0"
   }
 }
