--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "http-status": "^2.0.0"
+    "http-status": "^2.0.0",
+    "moment": "^2.30.1"
   }
 }
